# proxybase-gui

./: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  api.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  bridge.rs  commands.rs  lib.rs  main.rs  seller.rs
src-tauri/tests/: bridge_test.rs
src/components/: BottomNav.tsx  CountryFlag.tsx  JsonView.tsx  Layout.tsx  PasswordInput.tsx  StatusBar.tsx
src/hooks/: useBackend.ts
src/pages/: AccountPage.tsx  BuyerPage.tsx  DepositPage.tsx  FaqPage.tsx  LoginPage.tsx  MarketPage.tsx  SellerPage.tsx  WalletPage.tsx  WelcomePage.tsx
