[package]
name = "proxybase-gui"
version = "0.1.0"
description = "ProxyBase desktop GUI built with Tauri"
authors = ["ProxyBase Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/proxybasehq/proxybase-gui"
homepage = "https://proxybase.xyz"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "proxybase_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
libproxybase = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
hex = "0.4"
dirs = "5"
anyhow = "1"
tokio = { version = "1", features = ["sync", "time", "net", "io-util", "macros"] }
fast-socks5 = "1.0.0"
rand = "0.8"
tauri-plugin-positioner = { version = "2.3.2", features = ["tray-icon"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

